<resources>
    // Tela Inicial
    <string name="app_name">Filas4Play</string>
    <string name="titulo_filas4play">Filas 4Play</string>
    <string name="nome_parque">Balão Mágico Park</string>
    <string name="txt_cadastro">Ainda não é Cadastrado?</string>
    <string name="clique_aqui">Clique Aqui</string>
    <string name="funcionarios">Funcionarios</string>
    <string name="login">Login</string>

    // Tela Item Cliente
    <string name="txt_publico">Público:</string>
    <string name="txt_historico">Historico:</string>


    // Tela Cadastro
    <string name="cadastro_nome">Nome:</string>
    <string name="cadastro_dtnasc">Data Nascimento:</string>
    <string name="cadastro_contato">Contato:</string>
    <string name="cadastro_cep">CEP:</string>
    <string name="btn_buscarcep">Buscar Cep</string>
    <string name="cadastro_rua">Rua:</string>
    <string name="cadastro_complemento">Complemento:</string>
    <string name="cadastro_bairro">Bairro:</string>
    <string name="cadastro_cidade">Cidade:</string>
    <string name="cadastro_uf">UF:</string>
    <string name="cadastro_email">Email:</string>
    <string name="cadastro_senha">Senha:</string>
    <string name="confirma_senha">Confirme sua senha:</string>

    // Tela Home
    <string name="btn_logout">Logout</string>
    <string name="btn_redefinir_senha">Redefinir Senha</string>
    <string name="txt_entrar_Fila">Entrar na Fila</string>
    <string name="cadastro_publico">Selecione o Publico:</string>
    <string-array name="publico_array">
        <item>Geral</item>
        <item>Infantil</item>
        <item>PCD</item>
        <item>Idoso</item>
    </string-array>

    // Tela Fila
    <string name="confirma_posicao">Posição:</string>
    <string name="btn_sair_fila">Sair da Fila</string>

    <string name="btn_salvar">Salvar</string>
</resources>