<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D2DCA2">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.15"
        android:scaleType="centerCrop"
        android:src="@drawable/parque_tela_cadastro"
        android:contentDescription="Imagem de fundo do parque" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="24dp">

            <TextView
                android:id="@+id/txtNomeUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cadastro_nome"
                android:textSize="20sp"
                android:textColor="#0E0E0E"
                android:layout_marginBottom="12dp"/>

            <TextView
                android:id="@+id/textViewPublico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/txt_publico"
                android:textSize="20sp"
                android:textColor="#0E0E0E"
                android:layout_marginBottom="12dp"/>

            <TextView
                android:id="@+id/txtContato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cadastro_contato"
                android:textSize="20sp"
                android:textColor="#0E0E0E"
                android:layout_marginBottom="12dp"/>

            <TextView
                android:id="@+id/txtNascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cadastro_dtnasc"
                android:textSize="20sp"
                android:textColor="#0E0E0E"
                android:layout_marginBottom="12dp"/>

            <TextView
                android:id="@+id/txtEndereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cadastro_rua"
                android:textSize="20sp"
                android:textColor="#0E0E0E"
                android:layout_marginBottom="12dp"/>

            <TextView
                android:id="@+id/txtCep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cadastro_cep"
                android:textSize="20sp"
                android:textColor="#0E0E0E"
                android:layout_marginBottom="12dp"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
