<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:background="#D2DCA2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TelaCadastroActivity">

        <ImageView
            android:id="@+id/background_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.15"
            android:scaleType="centerCrop"
            android:src="@drawable/parque_tela_cadastro"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/txt_titulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nome_parque"
            android:textColor="#0E0E0E"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="45dp"/>
        <EditText
            android:id="@+id/edt_nome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_nome"
            android:textColorHint="#000000"
            android:textColor="#0E0E0E"
            android:textSize="25sp"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/txt_titulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginVertical="8dp"/>

        <EditText
            android:id="@+id/edt_dtnasc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_dtnasc"
            android:textColorHint="#000000"
            android:textColor="#0E0E0E"
            android:textSize="25sp"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/edt_nome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginVertical="8dp"/>

        <EditText
            android:id="@+id/edt_contato"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_contato"
            android:textColorHint="#000000"
            android:textColor="#0E0E0E"
            android:textSize="25sp"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/edt_dtnasc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginVertical="8dp"/>

        <EditText
            android:id="@+id/edt_cep"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_cep"
            android:textColorHint="#000000"
            android:inputType="number"
            android:textColor="#0E0E0E"
            android:textSize="20sp"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/edt_contato"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginVertical="8dp"/>

        <Button
            android:id="@+id/btnBuscarCep"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_buscarcep"
            android:backgroundTint="#FBFBFB"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/edt_cep"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginVertical="12dp"/>

        <EditText
            android:id="@+id/edt_logradouro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_rua"
            android:textColorHint="#000000"
            android:textColor="#0E0E0E"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/btnBuscarCep"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginVertical="8dp"/>

        <EditText
            android:id="@+id/edt_complemento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_complemento"
            android:textColorHint="#000000"
            android:textColor="#0E0E0E"
            android:textSize="20sp"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/edt_logradouro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginVertical="8dp"/>

        <EditText
            android:id="@+id/edt_bairro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_bairro"
            android:textColorHint="#000000"
            android:textColor="#0E0E0E"
            android:textSize="20sp"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/edt_complemento"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"

            android:layout_marginVertical="8dp"/>

        <EditText
            android:id="@+id/edt_cidade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="408dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/cadastro_cidade"
            android:maxLines="1"
            android:textColor="#0E0E0E"
            android:textColorHint="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_bairro" />

        <EditText
            android:id="@+id/edt_uf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_uf"
            android:textColorHint="#000000"
            android:textColor="#0E0E0E"
            android:textSize="20sp"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/edt_cidade"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginVertical="8dp"/>

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="312dp"
            android:layout_marginEnd="24dp"
            android:drawableRight="@drawable/ic_email"
            android:ems="10"
            android:hint="@string/cadastro_email"
            android:inputType="textEmailAddress"
            android:maxLength="25"
            android:textColor="#0E0E0E"
            android:textColorHint="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_uf" />

        <EditText
            android:id="@+id/edt_senha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cadastro_senha"
            android:textColorHint="#000000"
            android:textColor="#0E0E0E"
            android:textSize="20sp"
            android:maxLength="25"
            android:inputType="numberPassword"
            app:layout_constraintTop_toBottomOf="@id/edt_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/img_toggle_senha" android:layout_marginStart="24dp"
            android:layout_marginVertical="8dp"
            android:layout_marginEnd="8dp"/>
            <ImageView
            android:id="@+id/img_toggle_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_eye" app:layout_constraintTop_toTopOf="@+id/edt_senha"
            app:layout_constraintBottom_toBottomOf="@+id/edt_senha"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/edt_confirmasenha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/confirma_senha"
            android:textColorHint="#000000"
            android:textColor="#0E0E0E"
            android:textSize="20sp"
            android:maxLength="25"
            android:inputType="numberPassword"
            app:layout_constraintTop_toBottomOf="@id/edt_senha"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/img_toggle_confirmasenha" android:layout_marginStart="24dp"
            android:layout_marginVertical="8dp"
            android:layout_marginEnd="8dp"/>
            <ImageView
            android:id="@+id/img_toggle_confirmasenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_eye" app:layout_constraintTop_toTopOf="@+id/edt_confirmasenha"
            app:layout_constraintBottom_toBottomOf="@+id/edt_confirmasenha"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/publico_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_publico"
            android:textStyle="bold"
            android:gravity="left"
            android:textColor="#0E0E0E"
            android:textSize="20sp"
            android:drawableRight="@drawable/ic_public"
            app:layout_constraintTop_toBottomOf="@id/edt_confirmasenha"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginVertical="24dp"/>


        <Spinner
            android:id="@+id/spinner_publico"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:textColor="#212121"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@id/publico_txt"/>

        <Button
            android:id="@+id/btn_salvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#FBFBFB"
            android:padding="12dp"
            android:text="@string/btn_salvar"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/spinner_publico"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/btn_salvar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
